# safe-stage

./: .gitignore  .gitlab-ci.yml  .nextest.toml  .rusty-hook.toml  Cargo.toml  LICENSE.md  LICENSE.txt  README.md
.github/workflows/: cargo-deny.yml  release.yml  safe-stage-miri.yml  safe-stage.yml  service-app.yml
.gitlab/: bindings.yml  caching.yml  repo.yml  safe-stage.yml
bindings/: README.md
bindings/BindingsCs/: BindingsCs.csproj  BindingsCs.sln
ci/: bindings.yml  caching.yml  repo.yml  safe-stage.yml  service-app.yml  templates.yml
collisioner/: Cargo.toml
collisioner/src/: lib.rs
collisioner/src/colliders/: aligned.rs  aligned_box.rs  bounded.rs  collider.rs  collides.rs  mod.rs  oriented_box.rs  point.rs  projectable.rs  rotation.rs  sphere.rs
collisioner/src/colliders/common/: bounded.rs  collides.rs  mod.rs  projectable.rs  rotation.rs
collisioner/src/colliders/complex/: bvh.rs  mod.rs
collisioner/src/colliders/primitive/: aligned_box.rs  collider.rs  mod.rs  oriented_box.rs  point.rs  sphere.rs
collisioner/src/collisions/: bvh.rs  mod.rs
collisioner/src/common/: axis.rs  collides.rs  mod.rs  quaternion.rs  rotation.rs  vector.rs
collisioner/src/complex/: bvh.rs  mod.rs
collisioner/src/math/: axis.rs  mod.rs  quaternion.rs  vector.rs
collisioner/src/primitive/: aligned_box.rs  collider.rs  oriented_box.rs  point.rs  sphere.rs
collisioner/src/tests/: asserts.rs
collisioner/src/utils/: asserts.rs
mather/: Cargo.toml
mather/src/: asserts.rs  lib.rs  quaternion.rs  vector.rs
pipeline/: caching.yml  collisioner.yml  logic.yml  main.yml  service-backend.yml  service-frontend.yml  templates.yml
safe-stage/: .gitignore  .nextest.toml  Cargo.toml  README.md  deny.toml
safe-stage/bindings/: Cargo.toml
safe-stage/bindings/src/: main.rs  transform.rs
safe-stage/collisions/: Cargo.toml
safe-stage/collisions/benches/: primitive_collision.rs
safe-stage/collisions/src/: common.rs  complex.rs  lib.rs  primitive.rs
safe-stage/collisions/src/common/: bounded.rs  projectable.rs  rotation.rs  transform.rs  translation.rs  treeable.rs
safe-stage/collisions/src/complex/: bvh.rs  bvh_array.rs  bvh_recursive.rs  bvh_sphere_linear.rs  bvh_sphere_recursive.rs  group.rs  tree.rs
safe-stage/collisions/src/primitive/: algo.rs  aligned_box.rs  builder.rs  collider.rs  oriented_box.rs  point.rs  sphere.rs  triangle.rs
safe-stage/collisions/src/primitive/algo/: guigue_2003.rs  tri_dataset.rs
safe-stage/maths/: Cargo.toml
safe-stage/maths/src/: asserts.rs  lib.rs  nan.rs  quaternion.rs  vector2.rs  vector3.rs
safe-stage/models/: Cargo.toml
safe-stage/models/benches/: linear_recursive_tree.rs  stage_movement.rs  tree_compare_build.rs  tree_compare_collision.rs  tree_compare_transform.rs
safe-stage/models/src/: assembly.rs  collider.rs  immovable.rs  lib.rs  loader.rs  movable.rs  parts.rs  position.rs
safe-stage/models/src/assembly/: ball.rs  thesis.rs
safe-stage/models/src/assembly/ball/: chamber.rs  stage.rs
safe-stage/models/src/assembly/ball/models/: BallArena.stl  BallStage.stl
safe-stage/models/src/assembly/thesis/: chamber.rs  equipment.rs  holders.rs  retract.rs  stage.rs
safe-stage/models/src/assembly/thesis/models/: Base.stl  Detector Alpha.stl  Detector Beta.stl  Door.stl  Holder Circle.stl  Holder Square.stl  Pole Piece.stl  Retract Arm.stl  Retract Entry.stl  Tilter.stl  Walls.stl
safe-stage/models/src/parts/: chamber.rs  equipment.rs  holder.rs  retract.rs  stage.rs
safe-stage/models/src/position/: linear.rs  sixaxis.rs
safe-stage/models/src/sample/: height_map.rs
safe-stage/paths/: Cargo.toml
safe-stage/paths/benches/: space_sampling.rs
safe-stage/paths/src/: common.rs  eager.rs  lib.rs  neighbors.rs  path.rs  postprocess.rs  resolver.rs  strategy.rs
safe-stage/paths/src/common/: heapstate.rs  reconstruct.rs  sight.rs  timing.rs
safe-stage/paths/src/deferred/pathing/: a_star.rs  a_star_increment.rs  linear.rs  linear_par.rs  rotation_height.rs  rotation_height_par.rs  rotation_point.rs  rotation_point_par.rs  theta_star.rs
safe-stage/paths/src/eager/: pathing.rs  sampling.rs
safe-stage/paths/src/eager/pathing/: a_star.rs  a_star_with_los.rs  basic_prm.rs
safe-stage/paths/src/eager/sampling/: grid_sampling.rs  random_sampling.rs
safe-stage/paths/src/eager/space/: sampled_space_3d.rs  space_1d.rs  space_3d.rs
safe-stage/paths/src/lazy/: pathing.rs
safe-stage/paths/src/lazy/pathing/: a_star.rs  linear.rs  linear_par.rs  rotation_height.rs  rotation_height_par.rs  rotation_point.rs  rotation_point_par.rs  theta_star.rs
safe-stage/paths/src/neighbors/: limited_rotation_grid.rs  no_rotation_grid.rs
safe-stage/paths/src/postprocess/: granulate_path.rs  smooth.rs  smooth_par.rs
safe-stage/paths/src/precompute/: pathing.rs  space.rs
safe-stage/paths/src/precompute/pathing/: a_star.rs  basic_prm.rs
safe-stage/paths/src/precompute/sampling/: flood_sampling.rs  grid_sampling.rs  random_sampling.rs  samples_graph.rs
safe-stage/paths/src/precompute/space/: sampled_space_3d.rs  space_3d.rs
safe-stage/paths/src/resolver/: retract.rs  stage.rs
safe-stage/paths/src/resolver/retract/: linear.rs
safe-stage/paths/src/resolver/stage/: down_rotate_find.rs  linear.rs
safe-stage/paths/tests/: complex_path.rs
safe-stage/src/: concrete_parts.rs  concrete_resolvers.rs  configuration.rs  ffi.rs  id.rs  lib.rs  microscope.rs  presentation.rs  types.rs
safe-stage/src/configuration/: builder.rs  builder_ffi.rs  chamber.rs  equipment.rs  holder.rs  resolver_retract.rs  resolver_stage.rs  retract.rs  stage.rs
service-app/: .eslintrc  README.md  ServiceApp.sln  package.json  pnpm-lock.yaml
service-app/ServiceApp/: App.xaml  App.xaml.cs  ServiceApp.csproj
service-app/ServiceApp.Avalonia/: App.axaml  App.axaml.cs  Program.cs  ServiceApp.Avalonia.csproj  app.manifest
service-app/ServiceApp.View3D/: README.md  ServiceApp.View3D.csproj
service-app/ServiceApp.Vulkan/: ServiceApp.Vulkan.csproj
service-app/Vulkan/: DrawingSurfaceDemoBase.cs  GpuDemo.axaml  GpuDemo.axaml.cs  MainWindow.axaml  (+4 more)
(+187 files in other folders)
