[package]
name = "collisioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mather = { path = "../mather" }
itertools = "0.11.0"
thiserror = "1.0.50"

[dev-dependencies]
assert_float_eq = "1.1.3"
pretty_assertions = "1.4.0"
