[package]
name = "collisioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mather = { path = "../mather" }
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
assert_float_eq = "1.1.3"
pretty_assertions = "1.4.0"
