[package]
name = "safe-stage"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
# Swaps the library interface for C compatible
ffi = ["dep:log", "dep:fern"]

[dependencies]
collisions = { workspace = true }
maths = { workspace = true }
models = { workspace = true }
paths = { workspace = true }
fern = { workspace = true, optional = true }
log = { workspace = true, optional = true }
thiserror = { workspace = true }

[workspace]
resolver = "2"
members = [
    "bindings",
    "collisions",
    "maths",
    "models",
    "paths",
]

[workspace.package]
version = "0.1.0"
authors = ["Jindřich Moravec <xmorave2@fi.muni.cz>"]
edition = "2021"
rust-version = "1.83.0"
readme = "../README.md"
license-file = "../LICENSE.md"
publish = false

[workspace.dependencies]
collisions.path = "./collisions"
maths.path = "./maths"
models.path = "./models"
paths.path = "./paths"

assert_float_eq = "1.1.3"
bitvec = "1.0.1"
criterion = "0.5.1"
fern = "0.7.0"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.193"
thiserror = "2.0.3"
tinystl = "0.0.3"
