[package]
name = "bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
cbindgen = { version = "0.27.0" }
csbindgen = { version = "1.9.3" }
proc-macro2 = { version = "1.0.92" }
quote = { version = "1.0.37" }
syn = { version = "2.0.90", features = ["full"] }
