[package]
name = "collisions"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = ["bvh-recursive", "rayon-group"]
# Adds `serde` support
serde = ["dep:serde", "maths/serde"]
# Enables `rayon` for operations in `ColliderGroup`
rayon-group = ["dep:rayon"]
# Enables `rayon` for operations in `BvhSphereLinear`
rayon-bvh-linear = ["dep:rayon"]
# Prefers `BvhSphereLinear` for `BvhSphere`
bvh-linear = []
# Prefers `BvhSphereRecursive` for `BvhSphere`
bvh-recursive = []

[[bench]]
name = "primitive_collision"
harness = false

[dependencies]
maths = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"], optional = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
criterion = { workspace = true }
