[package]
name = "maths"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
# Adds `serde` support
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
