[package]
name = "models"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
# Adds `serde` support
serde = ["dep:serde", "collisions/serde", "maths/serde"]

[[bench]]
name = "stage_movement"
harness = false

[[bench]]
name = "tree_compare_build"
harness = false

[[bench]]
name = "tree_compare_collision"
harness = false

[[bench]]
name = "tree_compare_transform"
harness = false

[dependencies]
collisions = { workspace = true }
maths = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
tinystl = { workspace = true }

[dev-dependencies]
assert_float_eq = { workspace = true }
criterion = { workspace = true }
