[package]
name = "paths"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
# Adds `serde` support
serde = ["dep:serde", "collisions/serde", "maths/serde", "models/serde"]

[[bench]]
name = "space_sampling"
harness = false

[dependencies]
collisions = { workspace = true }
maths = { workspace = true }
models = { workspace = true }
bitvec = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
